# Async_Scraper

./: .copilot-instructions.md  .copilot.md  API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT.md  LICENSE  PRD.md  README.md  ROADMAP.md  USAGE.md  USAGE_GUIDE.md  async_scraper_arch.py  example-copilot-config.json  pyproject.toml  real_results.csv  sample-config.json  test_companies.csv  test_real_domain.csv  test_results.csv
.github/: copilot-instructions.md
examples/: README.md  python_client.py
scraper/: __init__.py
scraper/api/: __init__.py  job_manager.py  main.py  persistent_job_manager.py
scraper/api/middleware/: __init__.py  auth.py  rate_limit.py
scraper/api/models/: __init__.py  jobs.py  scrape.py
scraper/api/routes/: __init__.py  enhanced.py  health.py  jobs.py  proxy.py  scrape.py  websocket.py
scraper/api/routes/admin/: __init__.py  monitoring.py  system.py  tenants.py
scraper/cli/: main.py
scraper/core/: config.py  logger.py
scraper/core/cache/: cache_utils.py  lru_cache.py  redis_cache.py
scraper/core/monitoring/: __init__.py  health.py  metrics.py  tracing.py
scraper/core/proxy/: __init__.py  health_checker.py  manager.py  models.py  rotation.py
scraper/core/tenant/: __init__.py  isolation.py  manager.py  middleware.py  models.py
scraper/core/utils/: concurrency.py  rate_limit.py  retry.py
scraper/data/: loader.py  saver.py
scraper/data/cleaner/: base.py  datatypes.py  duplicates.py
scraper/database/: __init__.py  connection.py  migrations.py  models.py
scraper/queue/: __init__.py  redis_queue.py
scraper/services/: browser_manager.py  capture.py  domain_processor.py  email_extractor.py  js_scraper.py  scraper_manager.py  web_client.py
tests/integration/: test_api.py  test_js_scraping.py  test_proxy_api.py  test_scraping_api.py
tests/integration/admin/: test_monitoring_api.py  test_tenant_api.py
tests/unit/: test_browser_manager.py  test_cache_concurrency.py  test_core.py  test_data.py  test_database.py  test_queue.py  test_services.py
tests/unit/core/: test_proxy.py
tests/unit/core/monitoring/: test_health.py  test_metrics.py
tests/unit/core/tenant/: test_manager.py  test_models.py
